--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,12 +22,13 @@
       </div>
     </form>
 
-    <p class="input-group" ng-repeat="todo in todos">
-      <input type="text" ng-model="todo" class="form-control">
-      <span class="input-group-btn">
-        <input type="button" class="btn btn-danger" value="X" ng-click="removeTodo($index)" aria-label="Remove">
-      </span>
-    </p>
+    <div ui-sortable ng-model="todos">
+      <p class="input-group" ng-repeat="todo in todos" style="padding:5px 10px; cursor: move;">
+        <input type="text" ng-model="todo" class="form-control">
+        <span class="input-group-btn">
+          <input type="button" class="btn btn-danger" value="X" ng-click="removeTodo($index)" aria-label="Remove">
+        </span>
+      </p>
 </div>
 
 </body>
